--- a/src/style/FareDetails.css
+++ b/src/style/FareDetails.css
@@ -109,6 +109,7 @@
 }
 
 #fareContainerimg{
+    background-image: url("/public/train1.jpeg");
     width: 1518px;
     height: 640px;
     filter: brightness(0.4);
