--- a/src/style/welcome.css
+++ b/src/style/welcome.css
@@ -38,6 +38,11 @@
 
 #welcomeDivimg {
     position: absolute;
+    /* background-image: url("/public/train23.png");
+    width: 100%;
+    height: 680px;
+    margin-top: 30px;
+    filter: brightness(0.3); */
 }
 
 #welcomeContainerimg {
@@ -81,6 +86,7 @@
     display: flex;
     padding: 15px;
     border-radius: 10px;
+    filter: drop-shadow(2px 4px 6px black);
 }
 
 .trainbetweenstationfromgroup{
